Sat Jun 12 02:51:42 CEST 2004 (tk)
----------------------------------
  * contrib/trashscan: removed due to security reasons:
		       http://www.gossamer-threads.com/lists/clamav/devel/9548
		       (thanks to James Lick <jlick*drivel.com>)

Sat Jun 12 02:11:12 CEST 2004 (tk)
----------------------------------
  * libclamav: pe: integrate with UPX decompressor from aCaB <acab*clamav.net>
	           (with support for NRV2B, NRV2D and NRV2E compression).
		   To protect against compressed files with hacked headers,
		   the PE parser tries to find a signature of the UPX
		   decompression routine at EP + 0x78.

Fri Jun 11 22:11:31 CEST 2004 (tk)
----------------------------------
  * libclamav: pe: add dumper; RVA calculation; fix error codes

Wed Jun  9 17:47:29 CEST 2004 (tk)
----------------------------------
  * clamd: do not display "Command parser: read() failed." (in SESSION mode)
	   if the client disconnescts (problem reported by Matthew Trent
	   <mtrent*localaccess.com> and Omer Faruk Sen <ofsen*enderunix.org>)

Tue Jun  8 22:46:29 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Ensure --from always takes an argument

Sun Jun  6 22:35:19 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Find uuencoded viruses in multipart/mixed that have no
  	start of message boundaries

Sun Jun  6 03:38:08 CEST 2004 (tk)
----------------------------------
  * clamscan, freshclam, clamd: make sure privileges are properly dropped
    (problem on system with CAP_SETUID disabled reported by Tuomas Silen
    <tuomas.silen*nodeta.fi>)
  * Makefiles: prevent linking against old libclamav versions (patch (from PLD)
	       submitted by Oden Eriksson <oeriksson*mandrakesoft.com>)
  * configure: support pkg-config and clamav-config (patch by Scott Beck
	       <sbeck*gossamer-threads.com>)

Thu Jun  3 17:53:45 CEST 2004 (tk)
----------------------------------
  * doc: update

Thu Jun  3 14:15:38 BST 2004 (njh)